SERVER-23283 RangeDeleter does not log cursor ids correctly in deleteNow()

(cherry picked from commit 26603490725d969247044de4f36f487972264023)